--- a/MyShopProject/Areas/MYSHOP/Views/ShopPerformanceDetails/ShopPerformanceDetailsIndex.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/ShopPerformanceDetails/ShopPerformanceDetailsIndex.cshtml
@@ -155,6 +155,10 @@
         //var lookup = ASPxClientControl.GetControlCollection().GetByName("StateGridLookup");
         //lookup.GetGridView().Refresh();
 
+        // Rev 2.0
+        gridShopPerformanceDetailsList.Refresh();
+        // End of Rev 2.0
+
         $("#drpuser").chosen({
             width: "100%"
         });
