--- a/MyShopProject/Areas/MYSHOP/Views/partyDetails/PartyList.cshtml
+++ b/MyShopProject/Areas/MYSHOP/Views/partyDetails/PartyList.cshtml
@@ -45,6 +45,11 @@
         dtLogFrom.SetValue(d);
         dtLogTo.SetValue(d);
 
+        // Rev 11.0
+        gridPartyDetails.Refresh();
+        gridPartyDetails.Refresh();
+        // End of Rev 11.0
+
         //$("#drpuser").chosen({
         //    width: "100%"
         //})
